<resources>
    <string name="app_name">猎手直播</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">附近</string>
    <string name="title_notifications">消息</string>
    <string name="title_focus">Focus</string>
    <string name="title_nearly">Nearly</string>
    <string name="title_zhibo">直播</string>
    <string name="p_buy">抢购</string>
    <string name="label_friend">交友</string>
    <string name="label_outdoor">户外</string>
    <string name="label_film">电影</string>
    <string name="label_hot">热点</string>
    <string name="font_search">&#xe6b5;</string>
    <string name="status_good">好物</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="label_samecity">同城</string>
    <string name="trends">动态</string>
    <string name="hint_search">搜索你想要的信息</string>
    <string name="btn_buy_immediate">立即抢购</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_input_mobile_hint">请输入手机号码</string>
    <string name="text_input_password_hint">请输入密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_input_verifycode_hint">请输入验证码</string>
    <string name="text_verifycode">验证码</string>
    <string name="text_agree_register">注册即代表你同意</string>
    <string name="text_agreement">《猎手直播注册协议》</string>
    <string name="text_start_zhibo">开启猎手直播</string>
    <string name="icon_qq">&#xe876;</string>
    <string name="icon_wechat">&#xe600;</string>
    <string name="icon_weibo">&#xe605;</string>
    <string name="icon_look_password">&#xe632;</string>
    <string name="icon_close_password">&#xe610;</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_success">RegisterSuccessActivity</string>
    <string name="title_activity_personal">个人中心</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_level">UserLevelActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="text_hotbuy_success">已经抢购成功~</string>
    <string name="text_back">返回</string>
    <string name="text_enter_store">进店</string>
    <string name="text_single_buy">单独购买</string>
</resources>
